Fix nav menu overflow on landscape

--- a/src/components/layout/Header/Header.css
+++ b/src/components/layout/Header/Header.css
@@ -136,6 +136,7 @@ header.scroll-down {
     flex-direction: column;
     gap: 15px;
     counter-set: item 0;
+    overflow-y: auto;
   }
 
   .nav-item-mobile {
